<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/Theme.AppCompat.NoActionBar"
            app:titleTextAppearance="@style/ToolBar.TitleText" />

    </android.support.design.widget.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc" />

    <RelativeLayout
        android:id="@+id/btn_screen_off"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/check_screen_off"
            android:gravity="center_vertical"
            android:text="@string/text_screen_off"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_toLeftOf="@+id/check_screen_off"
            android:text="@string/model_screen_off" />

        <RadioButton
            android:id="@+id/check_screen_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:tag="@string/model_screen_off" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc" />

    <RelativeLayout
        android:id="@+id/btn_check_time"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/check_time"
            android:gravity="center_vertical"
            android:text="@string/text_time"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text3"
            android:layout_toLeftOf="@+id/check_time"
            android:text="@string/model_time" />

        <RadioButton
            android:id="@+id/check_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:tag="@string/model_time" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc" />

    <RelativeLayout
        android:id="@+id/btn_every_time"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="vertical"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/check_every_time"
            android:gravity="center_vertical"
            android:text="@string/text_every_time"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text5"
            android:layout_toLeftOf="@+id/check_every_time"
            android:text="@string/model_every_time" />

        <RadioButton
            android:id="@+id/check_every_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:tag="@string/model_every_time" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#cccccc" />

</LinearLayout>